@@ -5,9 +5,6 @@ import com.bloxbean.cardano.client.api.ProtocolParamsSupplier;
 import com.bloxbean.cardano.client.api.TransactionProcessor;
 import com.bloxbean.cardano.client.api.UtxoSupplier;
 import com.bloxbean.cardano.client.api.model.Amount;
-import com.bloxbean.cardano.client.api.model.Result;
-import com.bloxbean.cardano.client.api.model.Utxo;
-import com.bloxbean.cardano.client.coinselection.UtxoSelectionStrategy;
 import com.bloxbean.cardano.client.coinselection.impl.DefaultUtxoSelectionStrategyImpl;
 import com.bloxbean.cardano.client.function.Output;
 import com.bloxbean.cardano.client.function.TxBuilderContext;
@@ -18,10 +15,12 @@ import com.bloxbean.cardano.client.function.helper.ScriptCallContextProviders;
 import com.bloxbean.cardano.client.function.helper.model.ScriptCallContext;
 import com.bloxbean.cardano.client.plutus.api.PlutusObjectConverter;
 import com.bloxbean.cardano.client.plutus.impl.DefaultPlutusObjectConverter;
-import com.bloxbean.cardano.client.transaction.spec.*;
+import com.bloxbean.cardano.client.transaction.spec.CostMdls;
+import com.bloxbean.cardano.client.transaction.spec.ExUnits;
+import com.bloxbean.cardano.client.transaction.spec.Language;
+import com.bloxbean.cardano.client.transaction.spec.RedeemerTag;
 import com.bloxbean.cardano.client.transaction.util.CostModelUtil;
 import com.bloxbean.cardano.client.util.JsonUtil;
-import com.bloxbean.cardano.client.util.Tuple;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
@@ -32,15 +31,13 @@ import org.cardanofoundation.hydrapoc.batch.data.output.ResultDatum;
 import org.cardanofoundation.hydrapoc.commands.PlutusScriptUtil;
 import org.cardanofoundation.hydrapoc.commands.TransactionUtil;
 import org.cardanofoundation.hydrapoc.common.OperatorAccountProvider;
-import org.cardanofoundation.hydrapoc.importvote.VoteDatum;
 import org.cardanofoundation.merkle.core.MerkleTree;
 import org.springframework.stereotype.Component;
 
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.List;
-import java.util.Set;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 import static com.bloxbean.cardano.client.common.ADAConversionUtil.adaToLovelace;
@@ -63,17 +60,18 @@ public class VoteBatcher {
     private PlutusObjectConverter plutusObjectConverter = new DefaultPlutusObjectConverter();
 
     //TODO -- check collateral return when new utxo added during balanceTx
-    public String createAndPostBatchTransaction(int batchSize) throws Exception {
-        PlutusV2Script voteBatcherScript = plutusScriptUtil.getVoteBatcherContract();
-        String voteBatcherScriptAddress = plutusScriptUtil.getVoteBatcherContractAddress();
-        String sender = operatorAccountProvider.getOperatorAddress();
+    public Optional<String> createAndPostBatchTransaction(int batchSize) throws Exception {
+        val voteBatcherScript = plutusScriptUtil.getVoteBatcherContract();
+        val voteBatcherScriptAddress = plutusScriptUtil.getVoteBatcherContractAddress();
+        val sender = operatorAccountProvider.getOperatorAddress();
+
         log.info("Sender Address: " + sender);
         log.info("Script Address: " + voteBatcherScriptAddress);
 
-        List<Tuple<Utxo, VoteDatum>> utxoTuples = voteUtxoFinder.getUtxosWithVotes(batchSize);
+        val utxoTuples = voteUtxoFinder.getUtxosWithVotes(batchSize);
         if (utxoTuples.size() == 0) {
             log.warn("No utxo found");
-            return null;
+            return Optional.empty();
         }
 
         val resultBatchDatum = ResultBatchDatum.empty(0);
@@ -85,7 +83,7 @@ public class VoteBatcher {
 
             val challengeProposalDatum = new ChallengeProposalDatum(voteDatum.getChallenge(), voteDatum.getProposal());
 
-            ResultDatum resultDatum = resultBatchDatum.get(challengeProposalDatum);
+            var resultDatum = resultBatchDatum.get(challengeProposalDatum);
             if (resultDatum == null) {
                 resultDatum = new ResultDatum();
                 resultBatchDatum.add(challengeProposalDatum, resultDatum);
@@ -109,18 +107,17 @@ public class VoteBatcher {
         resultBatchDatum.setMerkleRootHash(mt.elementHash());
 
         log.info("############# Input Votes ############");
-        log.info(JsonUtil.getPrettyJson(utxoTuples.stream().map(utxoVoteDatumTuple -> utxoVoteDatumTuple._2).collect(Collectors.toList())));
+        log.info(JsonUtil.getPrettyJson(utxoTuples.stream().map(utxoVoteDatumTuple -> utxoVoteDatumTuple._2).toList()));
         log.info("########### Result Datum #############");
         log.info(JsonUtil.getPrettyJson(resultBatchDatum));
 
         // Build and post contract txn\
-        UtxoSelectionStrategy utxoSelectionStrategy = new DefaultUtxoSelectionStrategyImpl(utxoSupplier);
-        Set<Utxo> collateralUtxos =
-                utxoSelectionStrategy.select(sender, new Amount(LOVELACE, adaToLovelace(10)), Collections.emptySet());
+        val utxoSelectionStrategy = new DefaultUtxoSelectionStrategyImpl(utxoSupplier);
+        val collateralUtxos = utxoSelectionStrategy.select(sender, new Amount(LOVELACE, adaToLovelace(10)), Collections.emptySet());
 
         // Build the expected output
-        PlutusData outputDatum = plutusObjectConverter.toPlutusData(resultBatchDatum);
-        Output output = Output.builder()
+        val outputDatum = plutusObjectConverter.toPlutusData(resultBatchDatum);
+        val output = Output.builder()
                 .address(voteBatcherScriptAddress)
                 .datum(outputDatum)
                 .inlineDatum(true)
@@ -128,8 +125,8 @@ public class VoteBatcher {
                 .qty(adaToLovelace(1))
                 .build();
 
-        List<Utxo> scriptUtxos = utxoTuples.stream().map(utxoVoteDatumTuple -> utxoVoteDatumTuple._1)
-                .collect(Collectors.toList());
+        val scriptUtxos = utxoTuples.stream().map(utxoVoteDatumTuple -> utxoVoteDatumTuple._1)
+                .toList();
 
         val scriptCallContexts = scriptUtxos.stream().map(utxo -> ScriptCallContext
                 .builder()
@@ -172,10 +169,10 @@ public class VoteBatcher {
         })
         .andThen(BalanceTxBuilders.balanceTx(sender, 1));
 
-        TxBuilderContext txBuilderContext = TxBuilderContext.init(utxoSupplier, protocolParamsSupplier);
-        Transaction transaction = txBuilderContext.buildAndSign(txBuilder, operatorAccountProvider.getTxSigner());
+        val txBuilderContext = TxBuilderContext.init(utxoSupplier, protocolParamsSupplier);
+        val transaction = txBuilderContext.buildAndSign(txBuilder, operatorAccountProvider.getTxSigner());
 
-        Result<String> result = transactionProcessor.submitTransaction(transaction.serialize());
+        val result = transactionProcessor.submitTransaction(transaction.serialize());
         if (!result.isSuccessful()) {
             throw new RuntimeException("Transaction failed. " + result.getResponse());
         }
@@ -184,7 +181,7 @@ public class VoteBatcher {
 
         transactionUtil.waitForTransaction(result);
 
-        return result.getValue();
+        return Optional.of(result.getValue());
     }
 
 }
